--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 		"src"
 	],
 	"scripts": {
-		"check:format": "prettier . --check --ignore-unknown",
+		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
-		"prettify": "prettier . --write --ignore-unknown",
+		"prettify": "prettier . --write --ignore-unknown --end-of-line lf",
 		"prepublish": "tsc",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -100,6 +100,7 @@
 		"root": true
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^3.15.0",
 		"@typescript-eslint/eslint-plugin": "^5.35.1",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
