--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"root": true
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.24.4",
 		"@cloudflare/workers-types": "^3.15.0",
 		"@typescript-eslint/eslint-plugin": "^5.35.1",
 		"eslint-plugin-import": "^2.26.0",
