--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "d1-orm",
-	"version": "0.0.0",
+	"version": "0.0.1",
+	"private": false,
 	"description": "A simple strictly typed ORM for Cloudflare's D1 product",
 	"keywords": [
 		"orm",
