--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"src"
 	],
 	"scripts": {
+		"build": "tsc",
 		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
 		"prettify": "prettier . --write --ignore-unknown --end-of-line lf",
