--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"build:docs": "rm -r docs && typedoc",
+		"build:docs": "typedoc",
 		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
 		"lint:fix": "eslint src/*.ts --fix",
