--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"build:docs": "rm -r docs && typedoc",
+		"build:docs": "typedoc",
 		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
+		"docs:watch": "npm run build:docs --watch",
 		"lint:fix": "eslint src/*.ts --fix",
 		"prettify": "prettier . --write --ignore-unknown --end-of-line lf",
 		"prepublish": "tsc",
+		"serve": "npm run build:docs && wrangler pages dev docs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"eslintConfig": {
@@ -117,6 +119,7 @@
 		"prettier": "^2.7.1",
 		"prettier-plugin-packagejson": "^2.2.18",
 		"typedoc": "^0.23.14",
-		"typescript": "^4.8.2"
+		"typescript": "^4.8.2",
+		"wrangler": "^2.0.28"
 	}
 }
