Chore: pages correct links

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"build:docs": "typedoc",
+		"build:docs": "typedoc && node ./scripts/cleanup-docs.js",
 		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
-		"docs:watch": "npm run build:docs -- --watch",
+		"docs:watch": "typedoc --watch",
 		"lint:fix": "eslint src/*.ts --fix",
 		"prettify": "prettier . --write --ignore-unknown --end-of-line lf",
 		"prepublish": "tsc",
