Chore: start tests
This initially focuses on just testing Model & ORM validation, with future PRs to be focused on validation of model methods being run

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Check for linting issues
         run: npm run check:lint
 
+      - name: Run tests
+        run: npm run test
+
       - name: Create Release Pull Request
         uses: changesets/action@v1
         with:
