Reduce skipped action runs

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,12 +1,13 @@
 name: Checks
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   check:
     name: Check
-    # We want to run on external PRs, but not on our own internal PRs as they'll be run
-    # by the push to the branch.
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -31,9 +32,6 @@ jobs:
 
   tests:
     name: Run Tests
-    # We want to run on external PRs, but not on our own internal PRs as they'll be run
-    # by the push to the branch.
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
