--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,12 +1,13 @@
 name: Checks
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   check:
     name: Check
-    # We want to run on external PRs, but not on our own internal PRs as they'll be run
-    # by the push to the branch.
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -28,3 +29,24 @@ jobs:
 
       - name: Check for linting issues
         run: npm run check:lint
+
+  tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Use Node.js 16.17
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.17
+          cache: "npm" # cache ~/.npm in case 'npm ci' needs to run
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Test
+        run: npm run test
