--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
 		"root": true
 	},
 	"devDependencies": {
+		"@changesets/changelog-github": "^0.4.6",
 		"@changesets/cli": "^2.24.4",
 		"@cloudflare/workers-types": "^3.16.0",
 		"@types/mocha": "^9.1.1",
