Chore: build test

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -50,3 +50,24 @@ jobs:
 
       - name: Test
         run: npm run test
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Use Node.js 16.17
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.17
+          cache: "npm" # cache ~/.npm in case 'npm ci' needs to run
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
