--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"build:docs": "typedoc && node ./scripts/cleanup-docs.js",
+		"build:docs": "typedoc",
 		"check:format": "prettier . --check --ignore-unknown --end-of-line lf",
 		"check:lint": "eslint src/*.ts --cache --cache-strategy content --max-warnings=0",
 		"docs:watch": "typedoc --watch",
@@ -115,8 +115,9 @@
 		"@changesets/changelog-github": "^0.4.6",
 		"@changesets/cli": "^2.24.4",
 		"@cloudflare/workers-types": "^3.16.0",
+		"@knodes/typedoc-plugin-pages": "^0.23.1",
 		"@types/mocha": "^9.1.1",
-		"@typescript-eslint/eslint-plugin": "^5.36.1",
+		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"chai": "^4.3.6",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
@@ -124,7 +125,7 @@
 		"prettier": "^2.7.1",
 		"prettier-plugin-packagejson": "^2.2.18",
 		"typedoc": "^0.23.14",
-		"typescript": "^4.8.2",
-		"wrangler": "^2.0.28"
+		"typescript": "^4.8.3",
+		"wrangler": "^2.1.3"
 	}
 }
