--- a/package.json
+++ b/package.json
@@ -115,10 +115,10 @@
 	"devDependencies": {
 		"@changesets/changelog-github": "^0.4.7",
 		"@changesets/cli": "^2.25.0",
-		"@cloudflare/workers-types": "^3.17.0",
+		"@cloudflare/workers-types": "^4.20231025.0",
 		"@types/mocha": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
-		"chai": "^4.3.6",
+		"chai": "^4.3.10",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"mocha": "^10.1.0",
