--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"printWidth": 80,
 	"singleQuote": false,
 	"semi": true,
-	"useTabs": true
+	"useTabs": true,
+	"plugins": ["prettier-plugin-packagejson"]
 }
