--- a/package.json
+++ b/package.json
@@ -113,9 +113,6 @@
 		],
 		"root": true
 	},
-	"dependencies": {
-		"vitest": "^0.34.6"
-	},
 	"devDependencies": {
 		"@changesets/changelog-github": "^0.4.8",
 		"@changesets/cli": "^2.26.2",
@@ -127,6 +124,7 @@
 		"prettier-plugin-packagejson": "^2.4.6",
 		"typedoc": "^0.25.3",
 		"typescript": "^5.2.2",
+		"vitest": "^0.34.6",
 		"wrangler": "^3.15.0"
 	}
 }
