--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
 		// "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
 		/* Language and Environment */
-		"target": "es2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+		"target": "es2022" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 		"lib": [
-			"es2020"
+			"es2022"
 		] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
 		// "jsx": "preserve",                                /* Specify what JSX code is generated. */
 		// "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
@@ -27,7 +27,7 @@
 		// "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
 		/* Modules */
-		"module": "ES2020" /* Specify what module code is generated. */,
+		"module": "ES2022" /* Specify what module code is generated. */,
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
 		"moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -49,8 +49,8 @@
 
 		/* Emit */
 		"declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-		"declarationMap": true /* Create sourcemaps for d.ts files. */,
-		// "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
+		// "declarationMap": true /* Create sourcemaps for d.ts files. */,
+		"emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
 		"sourceMap": true /* Create source map files for emitted JavaScript files. */,
 		// "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
 		"outDir": "lib" /* Specify an output folder for all emitted files. */,
