--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,6 +5,10 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check:
     name: Check
@@ -15,14 +19,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.1.3
+
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: "npm" # cache ~/.npm in case 'npm ci' needs to run
+          cache: "pnpm"
 
       - name: Install NPM Dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Check for formatting issues
         run: npm run check:format
@@ -39,17 +48,22 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.1.3
+
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: "npm" # cache ~/.npm in case 'npm ci' needs to run
+          cache: "pnpm"
 
       - name: Install NPM Dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Test
-        run: npm run test
+        run: pnpm run test
 
   build:
     name: Build
@@ -60,14 +74,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.1.3
+
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: "npm" # cache ~/.npm in case 'npm ci' needs to run
+          cache: "pnpm"
 
       - name: Install NPM Dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
