--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,31 +18,36 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.1.3
+
       - name: Setup Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Check for formatting issues
-        run: npm run check:format
+        run: pnpm run check:format
 
       - name: Check for linting issues
-        run: npm run check:lint
-
-      - name: Run tests
-        run: npm run test
+        run: pnpm run check:lint
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
+
+      - name: Run tests
+        run: pnpm run test
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
         with:
           version: node .github/changeset-version.cjs
-          publish: npx changeset publish
+          publish: pnpm exec changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
